--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Removed authors file && added skip\_authors == true
 * Updated more metadata details on package in setup.cgf file
 * Fixed typo
 * Added script: pip\\_complete\_upgrade\_flow.bat
